# NuGetGallery

./: .deployment  .editorconfig  .eslintignore  .gitattributes  .gitignore  .gitmodules  .phit  Build-Solution.ps1  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  CREDITS.txt  Changelog.md  CodeQL.yml  Common.props  CredScanSuppressions.json  Deploy-StaticContent.ps1  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Enter-NuGetOps.ps1  Environments.sample.xml  Exit-NuGetOps.ps1  ISSUE_TEMPLATE.md  LICENSE.txt  Local.testsettings  NuGet.Cloud.targets  NuGet.Jobs.FunctionalTests.sln  NuGet.Jobs.sln  NuGet.Jobs.sln.DotSettings  NuGet.Server.Common.sln  NuGet.Services.Metadata.sln  NuGet.Services.Metadata.sln.DotSettings  NuGet.config  NuGetGallery.Aspire.slnx  NuGetGallery.FunctionalTests.sln  NuGetGallery.sln  NuGetGallery.sln.DotSettings  NuGetGallery.sln.docstates  NuGetGallery.v2.sln  (+45 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.nuget/: NuGet.config  NuGet.settings.targets  NuGet.targets  README.md  packages.config
.pipelines/: NuGet.Jobs-CI.yml  ci.yml  (+4 more)
python/StatsLogParser/: MANIFEST.in  README.md  StatsLogParser.pyproj  pyproject.toml  requirements.txt  setup.py
python/StatsLogParser/loginterpretation/: __init__.py  clientnametranslation.py  knownclients.yaml  nugetversion.py  packagedefinition.py  semanticversion.py  useragentparser.py
python/StatsLogParser/tests/: __init__.py  test_clientnametranslation.py  test_packagedefinition.py  test_useragentparser.py
(+13262 files in other folders)
