[tool.poetry]
name = "loginterpretation"
version = "0.4.0"
description = "Helper functions for parsing CDN logs to generate statistics"
authors = ["NuGet Server Team Engineering <nugetservereng@microsoft.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.2"
ua-parser = "^0.18.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-azurepipelines = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
